<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/lblCurrentReports"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:text="@string/WithinTheLastHour"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/navy"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/layoutLoader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/lblLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/GettingReports"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <TextView
        android:id="@+id/lblEmpty"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/PartyStarted"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnShareApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_menu_share_holo_light"
        android:text="@string/ShareApp"
        android:visibility="gone" />

    <ListView
        android:id="@+id/lvReports"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" >

        <!-- Preview: listitem=@layout/status_item -->
    </ListView>

</LinearLayout>